update html and sass migration

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,9 @@
-@import 'core/reset';
-@import 'components/app';
-@import 'components/dummy';
-@import 'components/footer';
-@import 'components/form';
-@import 'components/header';
-@import 'components/instructions';
-@import 'components/letters';
-@import 'components/loading';
+@import 'reset';
+@import 'app';
+@import 'dummy';
+@import 'footer';
+@import 'form';
+@import 'header';
+@import 'instructions';
+@import 'letters';
+@import 'loading';
